@@ -194,6 +194,7 @@
 		#--------------------------------------------------------------------------------
 		#Init array
 		local index=0
+		aNAME[$index]='Aria2';aPROCESS_NAME[$index]='aria2c';((index++))
 		aNAME[$index]='Avahi Daemon';aPROCESS_NAME[$index]='avahi-daemon';((index++))
 		aNAME[$index]='Bluetooth (Service)';aPROCESS_NAME[$index]='bluetooth';((index++))
 		aNAME[$index]='Bluetooth (Hciuart)';aPROCESS_NAME[$index]='hciattach';((index++))
