@@ -75,6 +75,7 @@
 		'rpimonitor'
 		'openmediavault-engined'
 		'blynkserver'
+		'aria2'
 	)
 
 	# - User: read custom services file
