@@ -230,7 +230,7 @@ _EOF_
 	# - Software
 	#NB: All software has a unique index that must not be changed (eg: DESKTOP_LXDE = 23)
 	TOTAL_SOFTWARE_INDEXS=0
-	TOTAL_SOFTWARE_INDEXS_HARDLIMIT=132	#Increase as needed. Must be higher than TOTAL_SOFTWARE_INDEXS once calculated in Software_Arrays_Init
+	TOTAL_SOFTWARE_INDEXS_HARDLIMIT=133	#Increase as needed. Must be higher than TOTAL_SOFTWARE_INDEXS once calculated in Software_Arrays_Init
 
 	INSTALLING_INDEX=0					#Which software index is currently being installed?
 
@@ -839,6 +839,18 @@ _EOF_
 			aSOFTWARE_CATEGORY_INDEX[$index_current]=3
 					  aSOFTWARE_TYPE[$index_current]=0
 			 aSOFTWARE_ONLINEDOC_URL[$index_current]='f=8&t=5&p=3327#p3327'
+
+
+		#------------------
+		index_current=132
+
+				 aSOFTWARE_WHIP_NAME[$index_current]='Aria2'
+				 aSOFTWARE_WHIP_DESC[$index_current]='download manager with web interface'
+			aSOFTWARE_CATEGORY_INDEX[$index_current]=3
+					  aSOFTWARE_TYPE[$index_current]=0
+			 aSOFTWARE_ONLINEDOC_URL[$index_current]='f=8&t=5&p=6177#p6177'
+		aSOFTWARE_REQUIRES_WEBSERVER[$index_current]=1
+		   aSOFTWARE_REQUIRES_SQLITE[$index_current]=1
 
 
 		#Cloud / Backups
@@ -5447,7 +5459,78 @@ _EOF_
 
 		fi
 
-		#SICKRAGE
+		#Aria2
+		INSTALLING_INDEX=132
+		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
+
+			Banner_Installing
+
+			#aria2 binary
+			INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/aria2_'
+
+			# - armv6
+			if (( $HW_ARCH == 1 )); then
+
+				INSTALL_URL_ADDRESS+='armv6.7z'
+
+			# - armv7+
+			elif (( $HW_ARCH >= 2 && $HW_ARCH < 10 )); then
+
+				INSTALL_URL_ADDRESS+='armv7.7z'
+
+			# - arm64
+			elif (( $HW_ARCH >= 10 && $HW_ARCH < 20 )); then
+
+				INSTALL_URL_ADDRESS+='arm64.7z'
+
+			# - x86_64
+			elif (( $HW_ARCH == 21 )); then
+
+				INSTALL_URL_ADDRESS+='x86_64.7z'
+
+			fi
+
+			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
+			if (( $? == 0 )); then
+
+				# - prereqs
+				AGI libc-ares2
+
+				wget "$INSTALL_URL_ADDRESS" -O package.7z
+				7z x -y package.7z
+				rm package.7z
+
+				mv aria2_* /usr/local/bin/aria2c
+				chmod +x /usr/local/bin/aria2c
+
+			else
+
+				Error_NoConnection_NoInstall
+
+			fi
+
+			#Web interface
+			INSTALL_URL_ADDRESS='https://github.com/ziahamza/webui-aria2/archive/master.zip'
+
+			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
+			if (( $? == 0 )); then
+
+				wget "$INSTALL_URL_ADDRESS" -O package.zip
+				unzip -o package.zip
+				rm package.zip
+
+				cp -R webui-aria2* /var/www/aria2
+				rm -R webui-aria2*
+
+			else
+
+				Error_NoConnection_NoInstall
+
+			fi
+
+		fi
+
+ 		#SICKRAGE
 		INSTALLING_INDEX=116
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
 
@@ -9188,6 +9271,26 @@ _EOF_
 
 		fi
 
+		#Aria2
+		INSTALLING_INDEX=132
+		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
+
+			cat << _EOF_ > /etc/systemd/system/aria2.service
+[Unit]
+Description=DietPi Aria2
+
+[Service]
+Type=simple
+ExecStart=/usr/local/bin/aria2c --enable-rpc --rpc-listen-all --rpc-secret=$GLOBAL_PW --dir=$FP_DIETPI_USERDATA_DIRECTORY/$FOLDER_DOWNLOADS
+
+[Install]
+WantedBy=multi-user.target
+_EOF_
+
+			systemctl daemon-reload
+
+		fi
+
 		#SYNCTHING
 		INSTALLING_INDEX=50
 		if (( ${aSOFTWARE_INSTALL_STATE[$INSTALLING_INDEX]} == 1 )); then
@@ -9689,6 +9792,15 @@ _EOF_
 			systemctl daemon-reload
 
 			rm -R /etc/blynkserver
+
+		elif (( $1 == 132 )); then
+
+			rm /etc/systemd/system/aria2.service
+			systemctl daemon-reload
+
+			rm /usr/local/bin/aria2c
+
+			rm -R /var/www/aria2
 
 		elif (( $1 == 119 )); then
 
