@@ -4,6 +4,7 @@ v147
 Changes / Improvements / Optimizations:
 DietPi-Config | Audio > Sound Card: Added support for Soekris DAM1021 DAC: https://github.com/Fourdee/DietPi/issues/808
 DietPi-Process_Tool | Blynk Server: now supported.
+DietPi-Software | Aria2: Download manager with slick web UI interface, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6177#p6177
 DietPi-Software | Blynk Server: config file added to the diepi user data folder, thanks to @joaofl: https://github.com/Fourdee/DietPi/pull/810
 
 Bug fixes:
